--- a/templates/main.html
+++ b/templates/main.html
@@ -7,10 +7,12 @@
 <body>
     <p>
         {% if alive == 'true' %}
-        <button type="button", onclick="location.href = 'http://127.0.0.1:8000/test/logout/'">logout</button>
+        <button type="button" onclick="location.href = 'http://127.0.0.1:8000/test/logout/'">logout</button>
         {% else %}
-        <button type="button", onclick="location.href = 'http://127.0.0.1:8000/test/login/'">login</button>
+        <button type="button" onclick="location.href = 'http://127.0.0.1:8000/test/login/'">login</button>
         {% endif %}
     </p>
+    {% block yo %}
+    {% endblock %}
 </body>
 </html>
