상속으로 채울 공간이 아니라서 주석으로 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,7 @@
         </div>
     </div>
     <div id="bottomInfoBox">
-        {% block team_info %}
-        {% endblock %}
+        <!-이 공간은 팀 정보를 저장하기 위한 공간입니다.-->
     </div>
 </body>
 </html>
