디자인 수정 중

--- a/static/css/baseTemplate.css
+++ b/static/css/baseTemplate.css
@@ -4,6 +4,8 @@ div#headMenu{
     height:150px;
 }
 div#logo{
+    display:inline-block;
+    float:left;
     width:239px;
     height:148px;
     border:1px solid yellow;
