--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button", onclick="location.href = 'http://127.0.0.1:8000/test/signup/'">회원가입</button>
+    <button type="button", onclick="location.href = 'http://127.0.0.1:8000/signup/'">회원가입</button>
 </body>
 </html>
