--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <div id="headMenu">
         <div id="logo" style="display:inline-block; float:left;">
-
+            <a href="http://127.0.0.1:8000/" >로고 이미지</a>
         </div>
         {% block head_menu %}
         {% endblock %}
