회원가입 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 {% url 'logout' as logout %}
 {% url 'login' as login %}
 {% url 'main' as main %}
+{% url 'signup' as signup %}
+{% url 'signupPage' as signupPage %}
 
 <!DOCTYPE html>
 <html lang="en">
