--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 {% url 'main' as main %}
 {% url 'signup' as signup %}
 {% url 'signupPage' as signupPage %}
+{% url 'infoCheck' as infoCheck %}
+{% url 'normalUserReviewSearch' as normalUserReviewSearch %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +14,7 @@
     <meta charset="UTF-8">
     <title>리뷰 작성 및 요약 분석</title>
     <link rel="stylesheet" href="{% static 'css/baseTemplate.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="headMenu">
@@ -30,7 +33,7 @@
             {% block main_contents %}
             {% endblock %}
         </div>
-        <div class="middle" id="rightSideMenu" style="border:1px solid black; width:300px;">
+        <div class="middle" id="rightSideMenu" style="border:1px solid #000000; width:300px;">
             {% block right_side_bar %}
             {% endblock %}
         </div>
