리뷰 작성/열람 예제

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 {% url 'signupPage' as signupPage %}
 {% url 'infoCheck' as infoCheck %}
 {% url 'normalUserReviewSearch' as normalUserReviewSearch %}
+{% url 'normalUserReviewRead' as normalUserReviewRead %}
 
 <!DOCTYPE html>
 <html lang="en">
