--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -19,7 +19,7 @@
         <br>
         <input type="submit" value="submit">
     </form>
-    <form id="image_review" action="http://127.0.0.1:8000/test/normal_user_review_write/" method="POST" enctype="multipart/form-data" style="display:none;">
+    <form id="image_review" action="#" method="POST" enctype="multipart/form-data" style="display:none;">
         {% csrf_token %}
         <button type="button" onclick="to_text()">텍스트</button>
         <button type="button" onclick="">이미지</button>
