--- a/static/css/color.scss
+++ b/static/css/color.scss
@@ -19,13 +19,85 @@ $indigo-700: #3D0A91;
 $indigo-800: #290661;
 $indigo-900: #140330;
 $purple: #6f42c1;
+$purple-100: #E2D9F3;
+$purple-200: #C5B3E6;
+$purple-300: #A98EDA;
+$purple-400: #8C68CD;
+$purple-500: $purple;
+$purple-600: #59359A;
+$purple-700: #432874;
+$purple-800: #2C1A4D;
+$purple-900: #160D27;
 $pink: #d63384;
+$pink-100: #F7D6E6;
+$pink-200: #EFADCE;
+$pink-300: #E685B5;
+$pink-400: #DE5C9D;
+$pink-500: $pink;
+$pink-600: #AB296A;
+$pink-700: #801F4F;
+$pink-800: #561435;
+$pink-900: #2B0A1A;
 $red: #dc3545;
+$red-100: #F8D7DA;
+$red-200: #F1AEB5;
+$red-300: #EA868F;
+$red-400: #E35D6A;
+$red-500: $red;
+$red-600: #B02A37;
+$red-700: #842029;
+$red-800: #58151C;
+$red-900: #2C0B0E;
 $orange: #fd7e14;
+$orange-100: #FFE5D0;
+$orange-200: #FECBA1;
+$orange-300: #FEB272;
+$orange-400: #FD9843;
+$orange-500: $orange;
+$orange-600: #CA6510;
+$orange-700: #984C0C;
+$orange-800: #653208;
+$orange-900: #331904;
 $yellow: #ffc107;
+$yellow-100: #FFF3CD;
+$yellow-200: #FFE69C;
+$yellow-300: #FFDA6A;
+$yellow-400: #FFCD39;
+$yellow-500: $yellow;
+$yellow-600: #CC9A06;
+$yellow-700: #997404;
+$yellow-800: #664D03;
+$yellow-900: #332701;
 $green: #198754;
+$green-100: #D1E7DD;
+$green-200: #A3CFBB;
+$green-300: #75B798;
+$green-400: #479F76;
+$green-500: $green;
+$green-600: #146C43;
+$green-700: #0F5132;
+$green-800: #0A3622;
+$green-900: #051B11;
 $teal: #20c997;
+$teal-100: #D2F4EA;
+$teal-200: #A6E9D5;
+$teal-300: #79DFC1;
+$teal-400: #4DD4AC;
+$teal-500: $teal;
+$teal-600: #1AA179;
+$teal-700: #13795B;
+$teal-800: #0D503C;
+$teal-900: #06281E;
 $cyan: #0dcaf0;
+$cyan-100: #CFF4FC;
+$cyan-200: #9EEAF9;
+$cyan-300: #6EDFF6;
+$cyan-400: #3DD5F3;
+$cyan-500: $cyan;
+$cyan-600: #0AA2C0;
+$cyan-700: #087990;
+$cyan-800: #055160;
+$cyan-900: #032830;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
@@ -70,6 +142,3 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark
 );
-div{
-  border:1px solid $black;
-}
