--- a/static/css/baseTemplate.scss
+++ b/static/css/baseTemplate.scss
@@ -1,16 +1,17 @@
 @import "color.scss";
 
-div #headMenu{
+div#headMenu{
   width:1504px;
   height:50px;
+  border:1px solid $black;
 }
 div#logo{
   display:inline-block;
-  floa:left;
+  float:left;
   width:239px;
   height:48px;
-  border:1px solid $yellow;
-  background-color:$yellow;
+  border:1px solid $yellow-400;
+  background-color:$yellow-400;
 }
 div#midContent{
   position:relative;
