--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load sass_tags static %}
+{% load static %}
 
 {% url 'logout' as logout %}
 {% url 'login' as login %}
@@ -14,7 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <title>리뷰 작성 및 요약 분석</title>
-    <link href="{% sass_src 'css/baseTemplate.scss' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/baseTemplate.css' %}" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
 <body>
