--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -28,7 +28,7 @@
             </button>
         </li>
     </ul>
-    <div style="display:inline-block; margin-left:211px;"></div>
+    <div style="display:inline-block; float:left; margin-left:216px; height:1px;"></div>
     <form id="search-form">
         <input type="search" placeholder="주소로 리뷰 검색" aria-label="Search" id="search-box">
         <button type="submit" id="search-button">Search</button>
@@ -38,7 +38,7 @@
             <button type="button" class="loginout" onclick="location.href = '{{logout}}'">logout</button>
             <button id="myInfo" onclick="location.href = '{{infoCheck}}'">내 정보</button>
         {% else %}
-            <div style="display:inline-block; margin-left:100px;"></div>
+            <div style="display:inline-block; float:left; width:106px;height:1px;"></div>
             <button type="button" class="loginout" onclick="location.href = '{{login}}'">login</button>
         {% endif %}
     </div>
