--- a/static/css/normalUserMainTemplate.css
+++ b/static/css/normalUserMainTemplate.css
@@ -1,3 +1,5 @@
-div#rightSideMenu{
-    display:none;
+div#rightSideMenu {
+  display: none;
 }
+
+/*# sourceMappingURL=normalUserMainTemplate.css.map */
