--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -1,18 +1,24 @@
-div#reviewContent{
-    width:750px;
-    height:250px;
-    border:1px solid grey;
+div#reviewContent {
+  width: 750px;
+  height: 250px;
+  border: 1px solid grey;
 }
-div#midContent{
-    height:1000px;
+
+div#midContent {
+  height: 1000px;
 }
-div.middle{
-    height:1000px;
+
+div.middle {
+  height: 1000px;
 }
-div#icon{
-    height:228px;
+
+div#icon {
+  height: 228px;
 }
-div#images{
-    border:1px solid red;
-    height:261px;
+
+div#images {
+  border: 1px solid red;
+  height: 261px;
 }
+
+/*# sourceMappingURL=normalUserReviewReadTemplate.css.map */
