리뷰 검색 페이지 수정

--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -1,33 +1,25 @@
 div#searchConditionForm {
   position: absolute;
-  height: 150px;
-  width: 896px;
   border: 2px solid orange;
   background-color: orange;
-  z-index: 1;
 }
 
 div#reviewSearchResult {
   position: relative;
   height: 586px;
-  width: 896px;
   border: 2px solid skyblue;
 }
 
 fieldset#common_info {
-  display: inline;
+  display: block;
 }
 
 fieldset#built_year {
-  display: inline;
+  display: block;
 }
 
 fieldset#address {
-  display: inline;
-}
-
-fieldset#address > input {
-  width: 30px;
+  display: block;
 }
 
 button#searchFormOpen {
@@ -35,8 +27,19 @@ button#searchFormOpen {
   z-index: 1;
 }
 
-input#otherOptions {
-  width: 350px;
+.review_writer {
+  border: 1px solid #0A58CA;
+  font-size: 15px;
+}
+
+.review_title {
+  border: 1px solid #0A58CA;
+  font-size: 20px;
+}
+
+.review_icon {
+  border: 1px solid #0A58CA;
+  height: 35px;
 }
 
 /*# sourceMappingURL=normalUserReviewSearchTemplate.css.map */
