--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -1,34 +1,38 @@
 @import "color.scss";
 div#searchConditionForm{
     position:absolute;
-    height:150px;
-    width:896px;
     border:2px solid orange;
     background-color:orange;
-    z-index:1;
 }
 div#reviewSearchResult{
     position:relative;
     height:586px;
-    width:896px;
     border:2px solid skyblue;
 }
 fieldset#common_info{
-    display:inline;
+    display:block;
 }
 fieldset#built_year{
-    display:inline;
+    display:block;
 }
 fieldset#address{
-    display:inline;
+    display:block;
 }
 fieldset#address>input{
-    width:30px;
 }
 button#searchFormOpen{
     position:absolute;
     z-index:1;
 }
-input#otherOptions{
-    width:350px;
+.review_writer{
+    border:1px solid $blue-600;
+    font-size:15px;
+}
+.review_title{
+    border:1px solid $blue-600;
+    font-size:20px;
+}
+.review_icon{
+    border:1px solid $blue-600;
+    height:35px;
 }
